--- a/style.css
+++ b/style.css
@@ -1,15 +1,25 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
 
+:root{
+    --azul-dnc:#0c70f2;
+    --preto-dnc:#303030;
+    --cinza-houve:#c9c9c9;
+    --fonte-padrao:'Inter';
+}
+
+
 body{
     margin: 0px;
     padding: 0px;
+    background: linear-gradient(180deg, rgba(12, 112, 242, 0.5) 19.91%, rgba(12, 112, 242, 0)24.84%), #303030;
+    background-repeat: no-repeat;
 }
 
 #principal{
     width: 100%;
     height: 85px;
     border:1px solid black;
-    background-color:#303030;
+    background-color:var(--preto-dnc);
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -36,12 +46,12 @@ body{
 
 #principal button{
     margin-right: 5%;
-    background-color: #0C70F2;
+    background-color: var(--azul-dnc);
     color: white;
     border: 0px;
     height: 39px;
     width: 80px;
-    font-family: 'Inter';
+    font-family: var(--fonte-padrao);
     font-size: 20px;
     font-weight: 600;
     box-shadow: 3px 2px 4px rgba(12, 112, 242, 0.55 );
@@ -49,3 +59,92 @@ body{
 
 }
 
+section{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 100px;
+    margin-bottom: 100px;
+}
+
+header{
+    color: white;
+    font-family: var(--fonte-padrao);
+}
+
+header h1{
+    text-transform: uppercase;
+    font-size: 80px;
+    font-weight: 800;
+    margin-bottom: 20px;
+    text-align: center;
+}
+
+header h2{
+    text-align: center;
+    font-size: 40px;
+    font-weight: 700;
+    margin-bottom: 100px;
+}
+
+header .invert{
+    background-color: black;
+    font-weight: bold;
+    padding: 5px;
+}
+form{
+    color: white;
+    font-family: var(--fonte-padrao);
+    font-size: 30px;
+    font-weight: 600;
+    width: 600px;
+}
+
+.Form-group{
+    display: flex;
+    flex-direction: column;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+form input{
+    border-radius: 10px;
+    height: 30px;
+    border: 0px;
+    font-size: 20px;
+    padding: 17px;
+    background-color: rgba(255, 255, 255, 0.9) ;
+}
+
+form label{
+    margin: 10px 0px 10px 0px;
+}
+
+form input::placeholder{
+    color: rgba(57, 57, 57, 0.5) ;
+}
+
+.checkbox-itens label{
+    font-size: 25px;
+}
+
+.checkbox-itens{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+input[type="checkbox"]{
+    transform: scale(1.7);
+}
+
+input[type="submit"]{
+    background-color: rgba(12, 112, 242, 0.9);
+    width: 100%;
+    height: 70px;
+    font-size: 32px;
+    color: white;
+    margin-top: 85px;
+    box-shadow: 0px 6px 4px rgba(12, 112, 242, 0.25);
+    cursor: pointer;
+}
