--- a/style.css
+++ b/style.css
@@ -151,7 +151,7 @@ input[type="submit"]{
 
 footer{
     width: 100%;
-    height: 360px;
+    height: 875px;
     background-color: var(--azul-dnc);
 }
 
@@ -279,5 +279,14 @@ footer.linha2 a:hover{
     }
     .checkbox-itens label{
         font-size: 17px;
+    }
+
+    footer .linha1{
+        flex-direction: column;
+    }
+    
+    footer .endereco{
+        width: 95%;
+        margin-bottom: 10px;
     }
 }
